# firelang

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/codegen/: codegen.rs  context.rs  mod.rs
src/compiler/: mod.rs
src/compiler/firelang_ast/: types.rs
src/compiler/firelang_errors/: gen.rs
src/compiler/firelang_lexer/: lexer.rs  mod.rs  unescape.rs
src/compiler/firelang_parser/: parser.rs
src/compiler/firelang_parser/ast/: codegen.rs  mod.rs  node.rs  node_impl.rs  token.rs  tree.rs
src/error_generator/: generator.rs
src/vm/: codegen.rs  context.rs
test/: binary_parsing.test  lexer.fire  lexer_test.fire  lexer_test.test  parser_test.test  unescape_panic_test.test  var_decl.test
