[package]
name = "firelang"
version = "0.1.0"
edition = "2021"
authors = ["Caviar-X", "Ink"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
strip = true
lto = "thin"
panic = "abort"

[profile.dev]
opt-level = 0

[dependencies]
clap = "*"
anyhow = "*"
lazy_static = "*"
unicode-xid = "*"