[package]
name = "firelang"
version = "0.1.0"
edition = "2021"
authors = ["Caviar-X", "Ink"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0

[dependencies]
clap = "*"
anyhow = "*"
unicode-xid = "*"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
once_cell = "1.16.0"
llvm-sys = "*"

[dependencies.iron_llvm]
git = "https://github.com/jauhien/iron-llvm.git"
